--- a/style.css
+++ b/style.css
@@ -1,33 +1,33 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     max-width: 1710px;
     margin: 0 auto;
     margin-top: 10px;
 }
 
-.nav{
+.nav {
     display: flex;
     justify-content: space-between;
     padding: 24px 60px;
 }
 
-.title-container{
+.title-container {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.title-container img{
+.title-container img {
     height: 50px;
     width: 50px;
 }
 
-.title-container h3{
+.title-container h3 {
     color: #006747;
     font-size: 30px;
     font-family: "Hind Guntur";
@@ -35,13 +35,13 @@ body{
     line-height: 30px;
 }
 
-.right-cornner{
+.right-cornner {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.fav{
+.fav {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -50,12 +50,12 @@ body{
     border-radius: 20px;
 }
 
-.fav img{
+.fav img {
     height: 30px;
     width: 30px;
 }
 
-.token{
+.token {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -64,12 +64,12 @@ body{
     border-radius: 20px;
 }
 
-.token img{
+.token img {
     height: 30px;
     width: 30px;
 }
 
-.copy-count{
+.copy-count {
     color: #fff;
     background-color: #00A63E;
     padding: 12px 36px;
@@ -79,84 +79,94 @@ body{
 }
 
 
-.hero-container{
+.hero-container {
     background: linear-gradient(90deg, #013223 0%, #006747 49.99%, #013223 100%);
     text-align: center;
     padding: 12px 0;
 }
 
-.hero-logo img{
+.hero-logo img {
     width: 92px;
     height: 92px;
 }
 
-.hero-title h3{
+.hero-title h3 {
     color: #fff;
     font-size: 40px;
     font-family: "Hind Guntur";
     font-weight: 700;
 }
 
-.hero-discription p{
+.hero-discription p {
     color: #fff;
     font-size: 20px;
     font-family: "Hind Guntur";
     font-weight: 600;
 }
 
-main{
+main {
     background-color: #F5FFF6;
     min-height: 100vh;
 }
 
-.data-container{
+.data-container {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     padding: 50px;
 }
 
-.hotline-container{
+.hotline-container {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
 }
 
-.hotline-card{
+.hotline-card {
+    min-width: 360px;
+    max-width: 360px;
     background-color: #fff;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.15);
     padding: 32px;
     border-radius: 12px;
+
+    display: flex;
+    /* make card a flex container */
+    flex-direction: column;
+    /* vertical layout */
+    justify-content: space-between;
 }
 
-.card-icon{
+.card-icon {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-.emergency-icon{
+.emergency-icon {
     height: 60px;
     width: 60px;
     padding: 14px;
     background-color: #FFE3E2;
     border-radius: 16px;
 }
-.emergency-icon img{
+
+.emergency-icon img {
     width: 100%;
 }
 
-.heart-icon{
+.heart-icon {
     width: 24px;
     height: 24px;
+    cursor: pointer;
 }
 
-.heart-icon img{
+.heart-icon img {
     width: 100%;
 }
 
-.hotline-title h3{
+.hotline-title h3 {
     font-family: "Hind Guntur";
     font-size: 24px;
     font-weight: 700;
@@ -164,7 +174,7 @@ main{
     margin-bottom: 8px;
 }
 
-.hotline-title p{
+.hotline-title p {
     color: #5C5C5C;
     font-size: 18px;
     font-family: "Roboto";
@@ -172,7 +182,7 @@ main{
     margin-bottom: 24px;
 }
 
-.hotline-number{
+.hotline-number {
     color: var(--Dark, #111);
     font-size: 32px;
     font-family: "Roboto";
@@ -180,7 +190,7 @@ main{
     margin-bottom: 5px;
 }
 
-.hotline-type p{
+.hotline-type p {
     color: var(--Gray, #5C5C5C);
     background: var(--Gray-Light, #F2F2F2);
     font-size: 18px;
@@ -192,13 +202,17 @@ main{
     margin-bottom: 24px;
 }
 
-.hotline-contact{
+.hotline-contact {
+    margin-top: auto;
     display: flex;
     gap: 8px;
+    justify-content: space-between;
 }
 
 
-#copy-btn{
+
+
+#copy-btn {
     border: 1px solid gray;
     display: flex;
     align-items: center;
@@ -206,20 +220,22 @@ main{
     gap: 10px;
     background-color: #fff;
     border-radius: 5px;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     cursor: pointer;
+    flex: 1;
+    justify-content: center;
 }
 
-#copy-icon{
+#copy-icon {
     height: 20px;
 }
 
-#copy-icon img{
+#copy-icon img {
     width: 100%;
     height: 100%;
 }
 
-#call-btn{
+#call-btn {
     border: none;
     display: flex;
     align-items: center;
@@ -228,20 +244,22 @@ main{
     background-color: #00A63E;
     border-radius: 5px;
     color: #fff;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     cursor: pointer;
+    flex: 1;
+    justify-content: center;
 }
 
-.call-icon{
+.call-icon {
     height: 20px;
 }
 
-.call-icon img{
+.call-icon img {
     height: 100%;
     width: 100%;
 }
 
-.history-container{
+.history-container {
     width: 400px;
     padding: 40px;
     background-color: #fff;
@@ -251,22 +269,22 @@ main{
     border-radius: 12px;
 }
 
-.history-header{
+.history-header {
     display: flex;
     justify-content: space-between;
 }
 
-.history-title{
+.history-title {
     display: flex;
     gap: 8px;
 }
 
-.history-title img{
+.history-title img {
     width: 20px;
     height: 20px;
 }
 
-#clear-btn{
+#clear-btn {
     border: none;
     color: #fff;
     background-color: #00A63E;
@@ -275,11 +293,11 @@ main{
     cursor: pointer;
 }
 
-.history-data{
+.history-data {
     margin-top: 15px;
 }
 
-.each-call{
+.each-call {
     display: flex;
     align-items: center;
     justify-content: space-between;
